
2009-08-07  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated to: 1.6.4

2009-08-02  Eric Belanger  <eric@archlinux.org>

	* subversion 1.6.3-2: Rebuilt against ruby 1.9

2009-06-07  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Now hopefully fixed git issues

2009-05-16  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Fixing wrong link against ruby 1.9

2009-05-11  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.6.2

2009-04-17  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Back to use svnmerge.py from trunk

2009-04-11  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Removing libtool files

2009-04-10  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.6.1
	* Added gerardo patch to fix insecure rpaths

2009-03-24  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Added sqlite3 as a dep

2009-03-21  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.6.0

2009-02-26  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.5.6

2008-10-10  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.5.3

2008-09-04  Douglas Soares de Andrade  <douglas@archlinux.org>

	* 1.5.2: Finally updated for i686 as it does not break the
	  devtools.

2008-08-13  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated for i686: 1.5.1

2008-07-23  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.5.0
